增加因闲的没事多出的一堆七七八八的文件进ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 .vscode/settings.json
+JavaPyHealthSerch.iml
+.idea/
+.out/production/JavaPyHealthSerch
+out/production/JavaPyHealthSerch/.gitignore
+out/production/JavaPyHealthSerch/Captcha.class
+out/production/JavaPyHealthSerch/getdata.py
+out/production/JavaPyHealthSerch/Login.class
+out/production/JavaPyHealthSerch/lib/mysql-connector-j-8.2.0.jar
+out/production/JavaPyHealthSerch/README.md
+out/production/JavaPyHealthSerch/Login$1.class
+out/production/JavaPyHealthSerch/Login$2.class
+out/production/JavaPyHealthSerch/MainPro.class
+out/production/JavaPyHealthSerch/Pyhandler.class
+out/production/JavaPyHealthSerch/Regist.class
+out/production/JavaPyHealthSerch/Regist$1.class
+out/production/JavaPyHealthSerch/Regist$2.class
+out/production/JavaPyHealthSerch/UserHome.class
+out/production/JavaPyHealthSerch/UserHome$1.class
+out/production/JavaPyHealthSerch/DBconnect.class
