--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,8 @@
 db.url=jdbc:mysql://localhost:3306/healthserch
 db.name=root
 db.password=324254
-py.code=0
+py.code=1
 #填你的主界面背景图的路径
-bg.bg1=git\\JavaPyHealthSerch\\image\\bg1.jpg
+bg.bg1=E:\\workContact\\JavaPyHealthSerch\\image\\bg1.jpg
 #登录和注册界面背景图的路径
-bg.bg2=git\\JavaPyHealthSerch\\image\\bg2.jpg
+bg.bg2=E:\\workContact\\JavaPyHealthSerch\\image\\bg2.jpg
