修改配置文件以及自动获取配置文件

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,8 @@
 db.url=jdbc:mysql://localhost:3306/healthserch
 db.name=root
 db.password=324254
-py.code=0
+#填你的getdata.py所在的路径
+py.src=git\\JavaPyHealthSerch\\getdata.py
 #填你的主界面背景图的路径
 bg.bg1=git\\JavaPyHealthSerch\\image\\bg1.jpg
 #登录和注册界面背景图的路径
