--- a/config.properties
+++ b/config.properties
@@ -1,9 +1,10 @@
+#填你的数据库地址
 db.url=jdbc:mysql://localhost:3306/healthserch
+#数据库用户名
 db.name=root
+#数据库地址
 db.password=324254
-#填你的getdata.py所在的路径
-py.src=git\\JavaPyHealthSerch\\getdata.py
+#登录和注册界面背景图的路径(空填则为默认背景图,下同)
+bg.bg1=
 #填你的主界面背景图的路径
-bg.bg1=git\\JavaPyHealthSerch\\image\\bg1.jpg
-#登录和注册界面背景图的路径
-bg.bg2=git\\JavaPyHealthSerch\\image\\bg2.jpg
+bg.bg2=
